--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,16 @@
+# reload config:
+# : source-file ~/.tmux.conf
 set-window-option -g mode-keys vi
+set-option -g default-terminal "screen-256color"
+set -g status-right '#(hostname)'  # don't show the time
+set -g status-interval 600
+
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+bind-key < resize-pane -L 5
+bind-key > resize-pane -R 5
+bind-key + resize-pane -U 5
+bind-key - resize-pane -D 5
